<resources>
    <string name="app_name">Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favourite</string>
    <string name="home">Home</string>
    <string name="my_recipes">My recipes</string>
    <string name="write_name">Write name of the recipe</string>
    <string name="add_products">Add products</string>
    <string name="product_name_hint">Product name</string>
    <string name="save">save</string>
    <string name="next">Next</string>
    <string name="choose_measure">Choose measuring</string>
    <string name="choose_categories">Choose categories:</string>
    <string name="choose_cooking_time">Choose cooking time</string>
    <string name="persons_number">Portions number</string>
    <string name="write_recipe">Write recipe</string>
    <string name="fill_data">Fill necessary data!</string>
    <string name="cooking_time">Cooking time</string>
    <string name="instructions">Preparations</string>
    <string name="baking">Ready in</string>
    <string name="ingredients">Ingredients</string>
    <string name="no_such_product">Product not found</string>
    <string name="should_add">No such product in base. Would you like to add?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="edit">Edit</string>
    <string name="error">Any error</string>
    <string name="cuisine">Cuisine</string>
    <string name="holiday">Holiday</string>
    <string name="time">Time</string>
    <string name="category">Category</string>
    <string name="description_hint">1000+ recipes</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="fridge">Fridge</string>
    <string name="no_filter_selected">No filter selected</string>
    <string name="no_cuisine_filter">No cuisine filter selected</string>
    <string name="no_course_filter">No course filter selected</string>
    <string name="no_diet_filter">No diet filter selected</string>
    <string name="add_products_hint">To add products use text view above</string>
    <string name="favorite_hint">Search for recipes and add them to your favorite. Start now!</string>
    <string name="course">Course</string>
    <string name="diet">Diet</string>
    <string name="add_recipe">Add your own recipe</string>
    <string name="shopping_list">Shopping list</string>
    <string name="write_your_instructions">Write your instructions</string>
    <string name="add_image">Add image</string>
    <string name="min">min</string>
    <string name="hour">hr</string>
    <string name="total_time">Total time</string>
    <string name="prep_time">Preparations time</string>
    <string name="delete">Delete</string>
    <string name="turn_on_translations_to_russian">Turn on translations to russian</string>
    <string name="publish_my_recipes">Publish my recipes</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="OK">OK</string>
    <string name="enter_url_here">Enter url here</string>
    <string name="number_of_calories">Number of calories</string>
    <string name="select_image">Select image</string>
    <string name="no_image_added">no image added</string>
    <string name="start_searching">start searching</string>
    <string name="random_recipe">Show random recipe</string>
    <string name="my_favs">My favorites</string>
    <string name="user_recipe">User recipes</string>
    <string name="max_cooking_time">Choose max cooking time</string>
    <string name="step">Step</string>
    <string name="recipe_name">Recipe name</string>
    <string name="nutrition_estimates">Nutrition Estimates</string>
    <string name="no_data_available">No data available for this recipe</string>
    <string name="choose_number">Choose number</string>
    <string name="translation">Translation</string>
    <string name="translate_from_american_metrics">Translate from american metrics</string>
    <string name="write_instructions">Write here your recipe instructions</string>
    <string name="redactor">Recipe creator</string>
    <string name="you_can_cook_now">Now you can cook</string>
    <string name="no_image">No image</string>
    <string name="ru_title">Russian title</string>
    <string name="en_title">English title</string>
    <string name="enter_ingredient_info">Enter ingredient info</string>
    <string name="share">Share</string>
    <string name="remove_bought">Remove bought ingredients</string>
    <string name="publish_description">To publish all my created recipes for other users</string>
    <string name="choose_category_to_filter">Category filter</string>
    <string name="choose_category_to_filter_full">Choose category from list to filter recipes</string>
    <string name="products_filter">Adding products</string>
    <string name="products_filter_hint">Add your products from fridge and search for recipes!</string>
    <string name="input_recipe">Input recipe</string>
    <string name="input_recipe_description">Input recipe or recipe url to process it</string>
    <string name="process_recipe">Process recipe</string>

    <string-array name="measures_array">
        <item></item>
        <item>lt</item>
        <item>kg</item>
        <item>gr</item>
        <item>cup</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>pcs</item>
    </string-array>
</resources>
