<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:name="@string/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/menu_categories"
            android:enabled="true"
            android:icon="@drawable/ic_bookmark"
            android:name="@string/categories"
            android:title="@string/categories" />

        <item
            android:id="@+id/menu_fridge"
            android:enabled="true"
            android:icon="@drawable/ic_fridge"
            android:name="other"
            android:title="@string/fridge" />

        <item
            android:id="@+id/menu_profile"
            android:enabled="true"
            android:icon="@drawable/ic_book_open_variant"
            android:name="other"
            android:title="@string/my_recipes" />
    </group>
</menu>