<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/filter_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDarkOpaque"
        android:orientation="vertical"
        android:padding="@dimen/padding_dimen">

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/cuisine_sp"
            style="@style/MaterialSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_cuisine_filter" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/course_sp"
            style="@style/MaterialSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cuisine_sp"
            android:layout_marginTop="@dimen/padding_dimen"
            android:hint="@string/no_course_filter" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/diet_sp"
            style="@style/MaterialSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_sp"
            android:layout_marginTop="@dimen/padding_dimen"
            android:hint="@string/no_diet_filter" />

        <RelativeLayout
            android:id="@+id/cooking_time_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/diet_sp"
            android:paddingLeft="@dimen/padding_dimen"
            android:paddingRight="@dimen/padding_dimen"
            android:paddingTop="@dimen/padding_dimen">

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/max_cooking_time" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" />
        </RelativeLayout>

        <com.appyvet.materialrangebar.RangeBar
            android:id="@+id/range_bar"
            style="@style/RangeBar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/cooking_time_title"
            app:mrb_tickEnd="60"
            app:mrb_tickInterval="5"
            app:mrb_tickStart="5" />

        <com.nex3z.flowlayout.FlowLayout
            android:id="@+id/flow_lo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/range_bar" />

        <Button
            android:id="@+id/search_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/flow_lo"
            android:drawableEnd="@drawable/ic_search"
            android:text="@string/start_searching" />
    </RelativeLayout>
</layout>